test/syntax-errors/test.js
'use strict';

/* eslint-disable no-unused-vars */
const {readFile} = require('fs');
/* eslint-enable no-unused-vars */

describe('Test suite #1', () => {
    it('should do smth', () => {});
});
